DevOps-Projects/K8s-Projects/microservices-demo/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deploy

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend-container
        image: httpd
---
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: backend

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
