DevOps-Projects/K8s-Projects/microservices-demo/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deploy

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend-container
        image: nginx
---
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
