DevOps-Projects/K8s-Projects/microservices-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: micro-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: mywebsite.local

    http:
      paths:

      - path: /frontend
        pathType: Prefix

        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /backend
        pathType: Prefix

        backend:
          service:
            name: backend-service
            port:
              number: 80
